--- a/formlearn.html
+++ b/formlearn.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Form</title>
-        
+        <script src="form.js"></script>
     </head>
     <body>
         <form method="get" action="">
